@@ -683,3 +683,4 @@
     - SHChangeNotify によって EXE ファイルの保存時にアイコンの変更を通知。
     - 英語の「Neutral」項目を言語リストに追加。
     - 言語リストボックスの初期選択を修正。
+    - 正しくRLEビットマップの情報を取得します。
