@@ -339,3 +339,4 @@
     - Notified icon change on saving EXE file by SHChangeNotify.
     - Added English "Neutral" entry to the language list.
     - Fixed initial language list box selection.
+    - Correctly retrieving info of RLE Bitmap.
